--- a/css/base/elements.css
+++ b/css/base/elements.css
@@ -8,7 +8,10 @@ html {
 }
 
 body {
-  font: 16px/1 sans-serif;
+  background: var(--base-background-color);
+  color: var(--base-font-color);
+  font-family: var(--primary-font);
+  font-size: 16px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   margin: 0;
@@ -49,8 +52,19 @@ button {
   transition: 0.3s;
 }
 
-a {
+a,
+a:link,
+a:visited,
+a:active,
+a:hover {
+  border: solid 1px transparent;
+  color: var(--primary-color);
   text-decoration: none;
+  transition: 0.3s;
+}
+
+a:hover {
+  border-color: var(--primary-color);
 }
 
 button {
