--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,11 +4,11 @@
 
   <main class="layout">
     <aside class="layout__sidebar">
-      <h1 class="layout__sidebar-logo">
+      <h1 class="layout__sidebar-logo logo">
         <img 
-          class="layout__sidebar-logo-img" 
+          class="logo__img" 
           src="/img/audiocrawl.svg" />
-        AudioCrawl
+        <span class="logo__title">AudioCrawl</span>
       </h1>
 
       <nav class="layout__sidebar-nav nav">
@@ -35,15 +35,13 @@
           </li>
         </ul>
         <a class="nav__submit button" href="#">Submit</a>
-        <p class="nav__credit">
-          Made with ❤️ at
-          <a 
-            class="nav__credit-link" 
-            href="https://www.digitalsurgeons.com">
-            Digital Surgeons
-          </a>
-        </p>
       </nav>
+      <p class="layout__sidebar-credit">
+        Made with ❤️ at
+        <a href="https://www.digitalsurgeons.com">
+          Digital Surgeons
+        </a>
+      </p>
     </aside>
     <div class="layout__content">
 
