--- a/components/button/styles.css
+++ b/components/button/styles.css
@@ -1,9 +1,16 @@
 .button {
-  background-image: linear-gradient(
-    180deg,
-    rgb(61, 139, 228) 0%,
-    rgb(1, 192, 243) 71%,
-    rgb(189, 241, 255) 100%
+  background: ;
+  background: linear-gradient(
+    135deg,
+    var(--blue-light) 0%,
+    var(--blue-dark) 100%
   );
-  box-shadow: 0px 21px 49px 0px rgba(6, 74, 152, 0.45);
+  border-radius: 35px;
+  color: var(--white);
+  display: inline-block;
+  font-weight: bold;
+  min-width: 230px;
+  padding: 25px 50px;
+  text-align: center;
+  text-transform: uppercase;
 }
