--- a/css/base/elements.css
+++ b/css/base/elements.css
@@ -8,12 +8,13 @@ html {
 }
 
 body {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   background: var(--base-background-color);
   color: var(--base-font-color);
   font-family: var(--primary-font);
   font-size: 16px;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+  letter-spacing: 1px;
   margin: 0;
 }
 
