--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -6,6 +6,7 @@
     <title>Welcome to Craft CMS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="referrer" content="origin-when-cross-origin" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link href="/dist/style.css" rel="stylesheet" />
   </head>
   <body>
