--- a/components/layout/styles.css
+++ b/components/layout/styles.css
@@ -6,17 +6,17 @@
 
 .layout__sidebar {
   background: var(--white);
-  box-shadow: 0px 0px 54px 0px rgba(0, 0, 0, 0.22);
+  box-shadow: 0px 0px 54px 0px rgba(25, 38, 45, 0.22);
   display: flex;
   flex-direction: column;
-  padding: 65px;
+  padding: 65px 45px;
   text-align: center;
   width: 360px;
 }
 
 .layout__sidebar-logo,
 .layout__sidebar-nav {
-  margin: 0 30px;
+  margin: 20px;
 }
 
 .layout__sidebar-credit {
