--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -10,6 +10,27 @@
     <link href="/dist/style.css" rel="stylesheet" />
   </head>
   <body>
-    {% block content %}{% endblock %}
+    <main class="layout">
+      <aside class="layout__sidebar">
+        <h1 class="layout__sidebar-logo logo">
+          <img 
+            class="logo__img" 
+            src="/img/audiocrawl.svg" />
+          <span class="logo__title">AudioCrawl</span>
+        </h1>
+
+        {% include '_components/nav/index.twig' %}
+        
+        <p class="layout__sidebar-credit">
+          Made with ❤️ at
+          <a href="https://www.digitalsurgeons.com">
+            Digital Surgeons
+          </a>
+        </p>
+      </aside>
+      <div class="layout__content">
+        {% block content %}{% endblock %}
+      </div>
+    </main>
   <body>
 </html>
