--- a/css/base/elements.css
+++ b/css/base/elements.css
@@ -71,6 +71,14 @@ button {
   overflow: visible;
 }
 
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: var(--primary-font);
+}
+
 ::-moz-focus-inner {
   border: 0;
   padding: 0;
