--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -26,5 +26,8 @@
         {% block content %}{% endblock %}
       </div>
     </main>
+
+    <script src="/dist/vendor.js"></script>
+    <script src="/dist/bundle.js"></script>
   <body>
 </html>
