🌟  Search component styles and behavior

--- a/components/search/index.twig
+++ b/components/search/index.twig
@@ -1,7 +1,7 @@
-<form class="search">
+<form class="search" data-search>
   <label class="search__label" for="search">
     <img class="search__icon" src="/img/search.svg" />
     Search Audiocrawl:
   </label>
-  <input class="search__input" id="search" type="search" placeholder="Music video, DJ, Creative, Film, interactive" />
+  <input class="search__input" data-search-input id="search" type="search" placeholder="Music video, DJ, Creative, Film, interactive" />
 </form>
