--- a/components/search/styles.css
+++ b/components/search/styles.css
@@ -3,6 +3,11 @@
   border-bottom: solid 1px var(--gray-light);
   display: flex;
   padding-bottom: 30px;
+  transition: 0.3s;
+}
+
+.search.is-active {
+  border-bottom-color: var(--blue);
 }
 
 .search__icon {
