🚧  Card markup and styles

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -6,12 +6,12 @@
   <section class="grid">
     {% for i in 0..12 %}
       <article class="grid__item card">
-        <div class="card__img-container">
-
-        </div>
-        <div class="card__info">
-          <p>Hello world</p>
-        </div>
+        <a class="card__link" href="">
+          <img class="card__img" src="https://placeimg.com/430/300/any" />
+          <div class="card__info">
+            <h3 class="card__title">Hello world</h3>
+          </div>
+        </a>
       </article>
     {% endfor %}
   </section>
