--- a/components/card/styles.css
+++ b/components/card/styles.css
@@ -2,17 +2,33 @@
   background: var(--white);
   border-radius: 6px;
   box-shadow: 0px 10px 40px 0px rgba(25, 38, 45, 0.3);
+  transform: translateZ(0);
+  transition: 0.3s;
 }
 
-.card__img-container {
+.card:hover {
+  transform: translateZ(0) scale(1.03);
+}
+
+.card__link {
+  display: block;
+}
+
+.card__img {
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  background: var(--black);
   height: 300px;
+  object-fit: cover;
+  width: 100%;
 }
 
 .card__info {
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
   padding: 25px 20px;
+}
+
+.card__title {
+  color: var(--black);
+  font-weight: bold;
 }
