--- a/components/logo/index.twig
+++ b/components/logo/index.twig
@@ -1,6 +1,8 @@
 <h1 class="layout__sidebar-logo logo">
-  <img 
-    class="logo__img" 
-    src="/img/audiocrawl.svg" />
-  <span class="logo__title">AudioCrawl</span>
+  <a class="logo__link" href="">
+    <img 
+      class="logo__img" 
+      src="/img/audiocrawl.svg" />
+    <span class="logo__title">AudioCrawl</span>
+  </a>
 </h1>
