--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -17,7 +17,7 @@
         
         <p class="layout__sidebar-credit">
           Made with ❤️ at
-          <a href="https://www.digitalsurgeons.com">
+          <a class="layout__sidebar-credit-link" href="https://www.digitalsurgeons.com">
             Digital Surgeons
           </a>
         </p>
