--- a/components/layout/styles.css
+++ b/components/layout/styles.css
@@ -9,7 +9,7 @@
   box-shadow: 0px 0px 54px 0px rgba(25, 38, 45, 0.22);
   display: flex;
   flex-direction: column;
-  padding: 65px 45px;
+  padding: 65px 45px 30px;
   text-align: center;
   width: 360px;
 }
@@ -22,6 +22,14 @@
 .layout__sidebar-credit {
   font-size: 13px;
   margin-top: auto;
+}
+
+.layout__sidebar-credit-link {
+  transition: 0.3s;
+}
+
+.layout__sidebar-credit-link:hover {
+  color: #ed3c33;
 }
 
 .layout__content {
