--- a/components/logo/styles.css
+++ b/components/logo/styles.css
@@ -1,3 +1,12 @@
+.logo {
+  transform: translateZ(0);
+  transition: 0.3s;
+}
+
+.logo:hover {
+  transform: scale(1.03);
+}
+
 .logo__title {
   display: block;
   text-indent: -99999px;
