🌟  Refactor label to contain whole search UI to improve focus UX

--- a/components/search/index.twig
+++ b/components/search/index.twig
@@ -1,7 +1,7 @@
-<form class="search" data-search>
-  <label class="search__label" for="search">
+<form class="search" >
+  <label class="search__label" for="search" data-search-label>
     <img class="search__icon" src="/img/search.svg" />
-    Search Audiocrawl:
+    <span class="search__title">Search Audiocrawl:</span>
+    <input class="search__input" data-search-input id="search" type="search" placeholder="Music video, DJ, Creative, Film, interactive" />
   </label>
-  <input class="search__input" data-search-input id="search" type="search" placeholder="Music video, DJ, Creative, Film, interactive" />
 </form>
