--- a/components/logo/styles.css
+++ b/components/logo/styles.css
@@ -1,6 +1,9 @@
 .logo {
+  margin: 0 auto;
+  max-width: 145px;
   transform: translateZ(0);
   transition: 0.3s;
+  width: 100%;
 }
 
 .logo:hover {
