--- a/components/nav/index.twig
+++ b/components/nav/index.twig
@@ -7,6 +7,11 @@
     </li>
     <li class="nav__item">
       <a class="nav__link" href="#">
+        Favorites
+      </a>
+    </li>
+    <li class="nav__item">
+      <a class="nav__link" href="#">
         About
       </a>
     </li>
