--- a/components/nav/index.twig
+++ b/components/nav/index.twig
@@ -32,5 +32,5 @@
       </a>
     </li>
   </ul>
-  <a class="nav__submit button" href="#">Submit</a>
+  <a class="nav__submit button button--primary" href="#">Submit</a>
 </nav>
