🚧  Modal markdown and styles

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -12,4 +12,6 @@
 
     <a class="listing__load-more button button--secondary" href="#">Load more</a>
   </div>
+
+  {% include '_components/modal/index.twig' %}
 {% endblock %}
