🌟  Modal markup and styles

--- a/components/modal/index.twig
+++ b/components/modal/index.twig
@@ -1,13 +1,14 @@
 <div class="modal">
   <div class="modal__container">
     <header>
-      <h1 class="modal__title">Halo Waypoint</h1>
+      <h2 class="modal__title">Halo Waypoint</h2>
       <time class="modal__date" datetime="2018-03-27">March 27, 2018</time>
     </header>
     <div class="modal__content">
       <div class="modal__main">
         <img class="modal__img" src="https://placeimg.com/677/418/any" />
         <div class="modal__body">
+          <h3 class="modal__subtitle">About this Crawl</h3>
           <p>
             Lorem Khaled Ipsum is a major key to success. To be successful you’ve 
             got to work hard, to make history, simple, you’ve got to make it.
@@ -38,6 +39,20 @@
             </a>
           </li>
         </ul>
+        <div class="modal__tags tags">
+          <h3 class="tags__title">Tags</h3>
+          <ul class="tags__list">
+            <li class="tags__item">
+              <a class="tags__tag" href="#">Interactive</a>
+            </li>
+            <li class="tags__item">
+              <a class="tags__tag" href="#">Social</a>
+            </li>
+            <li class="tags__item">
+              <a class="tags__tag" href="#">Soundscape</a>
+            </li>
+          </ul>
+        </div>
       </aside>
     </div>
   </div>
