--- a/components/modal/styles.css
+++ b/components/modal/styles.css
@@ -34,6 +34,11 @@
   padding-right: 40px;
 }
 
+.modal__subtitle {
+  color: var(--off-black);
+  margin-bottom: 10px;
+}
+
 .modal__title {
   color: var(--black);
   font-size: 30px;
