--- a/components/tags/styles.css
+++ b/components/tags/styles.css
@@ -18,4 +18,10 @@
   font-size: 13px;
   font-weight: bold;
   padding: 5px 15px;
+  transition: 0.3s;
+}
+
+.tags__tag:hover {
+  background: var(--blue);
+  color: var(--white);
 }
