🌟  Modal behavior, triggered by card click, closed by container click or esc keypress

--- a/components/card/index.twig
+++ b/components/card/index.twig
@@ -1,4 +1,4 @@
-<article class="grid__item card">
+<article class="grid__item card" data-card>
   <a href="#" data-card-image><img class="card__img" src="https://placeimg.com/430/300/any" /></a>
   <div class="card__info">
     <h3 class="card__title">
