--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -11,7 +11,12 @@
   </head>
   <body>
     <main class="layout">
-      <aside class="layout__sidebar">
+      <aside class="layout__sidebar" data-sidebar>
+        <a class="layout__sidebar-close" data-sidebar-close href="#">
+          <svg class="layout__sidebar-close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="14" height="14">
+            <path d="M14.7,1.3c-0.4-0.4-1-0.4-1.4,0L8,6.6L2.7,1.3c-0.4-0.4-1-0.4-1.4,0s-0.4,1,0,1.4L6.6,8l-5.3,5.3 c-0.4,0.4-0.4,1,0,1.4C1.5,14.9,1.7,15,2,15s0.5-0.1,0.7-0.3L8,9.4l5.3,5.3c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3 c0.4-0.4,0.4-1,0-1.4L9.4,8l5.3-5.3C15.1,2.3,15.1,1.7,14.7,1.3z"/>
+          </svg>
+        </a>
         {% include '_components/logo/index.twig' %}
         {% include '_components/nav/index.twig' %}
         
@@ -23,6 +28,7 @@
         </p>
       </aside>
       <div class="layout__content">
+        {% include '_components/handheld-header/index.twig' %}
         {% block content %}{% endblock %}
       </div>
     </main>
