--- a/components/card/index.twig
+++ b/components/card/index.twig
@@ -1,21 +1,27 @@
 <article class="grid__item card" data-card>
-  <a href="#" data-card-image><img class="card__img" src="https://placeimg.com/430/300/any" /></a>
+  <a href="#" data-card-image>
+    {% if data.image is defined and data.image|length > 0 %}
+      {% for img in data.image %}
+        <img class="card__img" src="{{ img.url }}" />
+      {% endfor %}
+    {% endif %}
+  </a>
   <div class="card__info">
     <h3 class="card__title">
       <a class="card__title-link" data-card-title href="#">
-        Hello world
+        {{ data.title }}
       </a>
     </h3>
     <ul class="card-tools">
       <li class="card-tools__item">
-        <a class="card-tools__link" href="#">
+        <a class="card-tools__link" href="#" data-link>
           <svg class="card-tools__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="14" height="14">
             <path d="M16,3c-0.6,0.3-1.2,0.4-1.9,0.5c0.7-0.4,1.2-1,1.4-1.8c-0.6,0.4-1.3,0.6-2.1,0.8c-0.6-0.6-1.5-1-2.4-1 C9.3,1.5,7.8,3,7.8,4.8c0,0.3,0,0.5,0.1,0.7C5.2,5.4,2.7,4.1,1.1,2.1c-0.3,0.5-0.4,1-0.4,1.7c0,1.1,0.6,2.1,1.5,2.7 c-0.5,0-1-0.2-1.5-0.4c0,0,0,0,0,0c0,1.6,1.1,2.9,2.6,3.2C3,9.4,2.7,9.4,2.4,9.4c-0.2,0-0.4,0-0.6-0.1c0.4,1.3,1.6,2.3,3.1,2.3 c-1.1,0.9-2.5,1.4-4.1,1.4c-0.3,0-0.5,0-0.8,0c1.5,0.9,3.2,1.5,5,1.5c6,0,9.3-5,9.3-9.3c0-0.1,0-0.3,0-0.4C15,4.3,15.6,3.7,16,3z"/></g>
           </svg>
         </a>
       </li>
       <li class="card-tools__item">
-        <a class="card-tools__link" href="#">
+        <a class="card-tools__link" href="{{ data.originalUrl }}" data-link target="_blank">
           <svg class="card-tools__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12" width="14" height="14">
             <g class="nc-icon-wrapper">
               <path d="M6.245.965,4.727,2.446A.75.75,0,0,0,5.773,3.521L7.3,2.033A1.875,1.875,0,1,1,9.944,4.691L8.463,6.21A.75.75,0,1,0,9.537,7.257l1.475-1.512a3.381,3.381,0,0,0,0-4.773A3.462,3.462,0,0,0,6.245.965Z" /> 
