--- a/templates/index.twig
+++ b/templates/index.twig
@@ -2,16 +2,8 @@
 
 {% block content %}
   {% include '_components/search/index.twig' %}
-
-  <div class="listing">
-    <section class="listing__grid grid">
-      {% for i in 0..17 %}
-        {% include '_components/card/index.twig' %}
-      {% endfor %}
-    </section>
-
-    <a class="listing__load-more button button--secondary" href="#">Load more</a>
-  </div>
-
+  {% include '_components/grid/index.twig' with {
+    cards: craft.entries.section('crawls')
+  } %}
   {% include '_components/modal/index.twig' %}
 {% endblock %}
