🌟  Add navigation links

--- a/components/logo/index.twig
+++ b/components/logo/index.twig
@@ -1,5 +1,5 @@
 <h1 class="layout__sidebar-logo logo">
-  <a class="logo__link" href="">
+  <a class="logo__link" href="/">
     <img 
       class="logo__img" 
       src="/img/audiocrawl.svg" />
