🌟  Add navigation links

--- a/components/nav/index.twig
+++ b/components/nav/index.twig
@@ -1,12 +1,12 @@
 <nav class="layout__sidebar-nav nav">
   <ul class="nav__list">
     <li class="nav__item">
-      <a class="nav__link is-active" href="#">
+      <a class="nav__link is-active" href="/">
         Browse
       </a>
     </li>
     <li class="nav__item">
-      <a class="nav__link" href="#">
+      <a class="nav__link" href="/favorites">
         <svg class="nav__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12" width="14" height="14">
           <path d="M11.572,4.27l-3.54-.514L6.448.548a.521.521,0,0,0-.9,0L3.968,3.756.428,4.27a.5.5,0,0,0-.277.853l2.562,2.5-.606,3.526a.5.5,0,0,0,.726.527L6,10.008l3.167,1.665a.488.488,0,0,0,.232.057.5.5,0,0,0,.494-.584L9.287,7.62l2.562-2.5a.5.5,0,0,0-.277-.853Z" />
         </svg>
@@ -14,27 +14,27 @@
       </a>
     </li>
     <li class="nav__item">
-      <a class="nav__link" href="#">
+      <a class="nav__link" href="/about">
         About
       </a>
     </li>
     <li class="nav__item">
-      <a class="nav__link" href="#">
+      <a class="nav__link" href="/newsletter">
         Newsletter
       </a>
     </li>
   </ul>
-  <a class="nav__submit button button--primary" href="#">Submit</a>
+  <a class="nav__submit button button--primary" href="/submit">Submit</a>
   <ul class="nav__social">
     <li class="nav__social-item">
-      <a class="nav__social-link" href="#">
+      <a class="nav__social-link" href="https://twitter.com/audiocrawl" target="_blank">
         <svg class="nav__social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="14" height="14">
           <path d="M16,3c-0.6,0.3-1.2,0.4-1.9,0.5c0.7-0.4,1.2-1,1.4-1.8c-0.6,0.4-1.3,0.6-2.1,0.8c-0.6-0.6-1.5-1-2.4-1 C9.3,1.5,7.8,3,7.8,4.8c0,0.3,0,0.5,0.1,0.7C5.2,5.4,2.7,4.1,1.1,2.1c-0.3,0.5-0.4,1-0.4,1.7c0,1.1,0.6,2.1,1.5,2.7 c-0.5,0-1-0.2-1.5-0.4c0,0,0,0,0,0c0,1.6,1.1,2.9,2.6,3.2C3,9.4,2.7,9.4,2.4,9.4c-0.2,0-0.4,0-0.6-0.1c0.4,1.3,1.6,2.3,3.1,2.3 c-1.1,0.9-2.5,1.4-4.1,1.4c-0.3,0-0.5,0-0.8,0c1.5,0.9,3.2,1.5,5,1.5c6,0,9.3-5,9.3-9.3c0-0.1,0-0.3,0-0.4C15,4.3,15.6,3.7,16,3z"/></g>
         </svg>
       </a>
     </li>
     <li class="nav__social-item">
-      <a class="nav__social-link" href="#">
+      <a class="nav__social-link" href="https://www.facebook.com/audiocrawl">
         <svg class="nav__social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="14" height="14">
           <path d="M24.92437,62V36H16V24h8.92437v-8.38004C24.92437,6.49153,30.70333,2,38.84651,2 c3.90067,0,7.25309,0.29041,8.23008,0.42022v9.53975l-5.64773,0.00257C37.00014,11.96253,36,14.06699,36,17.15515V24h12l-4,12h-8v26 H24.92437z"/></g>
         </svg>
