🌟  Show modal on single entry

--- a/components/modal/styles.css
+++ b/components/modal/styles.css
@@ -28,6 +28,12 @@
   z-index: 2;
 }
 
+.modal.is-active,
+.modal.is-active .modal__container {
+  display: block;
+  opacity: 1;
+}
+
 .modal__close {
   position: absolute;
   top: 20px;
