--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,15 +1,16 @@
 {% extends '_layout' %}
 
 {% block content %}
-  {% include '_components/search/index.twig' %}
-  {% include '_components/grid/index.twig' with {
-    cards: craft.entries.section('crawls')
-  } %}
-
+  {# if single entry page then render modal #}
   {% if entry is defined %}
     {% include '_components/modal/index.twig' with {
       show: true,
       data: entry
     } %}
   {% endif %}
+
+  {% include '_components/search/index.twig' %}
+  {% include '_components/grid/index.twig' with {
+    cards: craft.entries.section('crawls')
+  } %}
 {% endblock %}
