🐛  Wrap modal link text in span so JS doesn't replace link icon

--- a/components/modal/index.twig
+++ b/components/modal/index.twig
@@ -40,7 +40,7 @@
                   <path d="M3.47,8.514a.748.748,0,0,0,1.06,0l4-4A.75.75,0,1,0,7.47,3.453l-4,4A.75.75,0,0,0,3.47,8.514Z" />
                 </g>
               </svg>
-              {% if data is defined %} {{ data.originalUrl }} {% endif %}
+              <span>{% if data is defined %} {{ data.originalUrl }} {% endif %}</span>
             </a>
           </li>
           <li class="modal__item">
