--- a/components/search/index.twig
+++ b/components/search/index.twig
@@ -1,7 +1,7 @@
-<form class="search" >
+<form class="search" action="/search/" method="GET">
   <label class="search__label" for="search" data-search-label>
     <img class="search__icon" src="/img/search.svg" />
     <span class="search__title">Search Audiocrawl:</span>
-    <input class="search__input" data-search-input id="search" type="search" placeholder="Music video, DJ, Creative, Film, interactive" />
+    <input class="search__input" data-search-input id="search" type="search" name="q" placeholder="Music video, DJ, Creative, Film, interactive" />
   </label>
 </form>
