--- a/components/modal/index.twig
+++ b/components/modal/index.twig
@@ -1,4 +1,4 @@
-<div class="modal {% if show is defined and show == true %} is-active {% endif %}" data-modal>
+<div class="modal {% if show is defined and show == true %} is-active is-visible {% endif %}" data-modal>
   <div class="modal__container" data-modal-container>
     <a class="modal__close" data-modal-close href="#">
       <svg class="modal__close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="14" height="14">
