🏗  Renamed search-header to page-header as used in several places now

--- a/components/page-header/styles.css
+++ b/components/page-header/styles.css
@@ -1,8 +1,8 @@
-.search-header {
+.page-header {
   margin-top: 40px;
 }
 
-.search-header__title {
+.page-header__title {
   color: var(--gray);
   font-size: 18px;
   font-style: italic;
