💄  Separate button modifiers and apply to grid pagination button

--- a/components/grid/index.twig
+++ b/components/grid/index.twig
@@ -9,5 +9,5 @@
     {% endif %}
   </section>
 
-  <a class="listing__load-more button button--secondary" href="#">Load more</a>
+  <a class="listing__load-more button button--secondary button--large" href="#">Load more</a>
 </div>
