--- a/components/button/styles.css
+++ b/components/button/styles.css
@@ -1,4 +1,5 @@
 .button {
+  cursor: pointer;
   display: inline-block;
   font-weight: bold;
   text-align: center;
@@ -25,10 +26,18 @@
 }
 
 .button--secondary {
+  background: transparent;
   border: solid 1px var(--gray);
   color: var(--gray);
-  padding: 25px 60px;
+  padding: 12px 50px;
+}
+
+.button--full-width {
   width: 100%;
+}
+
+.button--large {
+  padding: 25px 60px;
 }
 
 .button--secondary:hover {
