✨  Adjust and complete thanks template

--- a/templates/thanks.twig
+++ b/templates/thanks.twig
@@ -1,8 +1,7 @@
 {% extends '_layout' %}
 
 {% block content %}
-  {% include '_components/search/index.twig' %}
-  {% include '_components/page-header/index.twig' with {
-    title: 'Thanks!' 
-  } %}
+  <div class="submit">
+    <h1 class="submit__title">Thanks! We'll check it out 🤘</h1>
+  </div>
 {% endblock %}
